--- a/projects/01_fyyur/starter_code/templates/forms/new_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/new_venue.html
@@ -1,8 +1,10 @@
-{% extends 'layouts/main.html' %}
-{% block title %}New Venue{% endblock %}
-{% block content %}
+<!--{% extends 'layouts/main.html' %} -->
+<!--{% block title %}New Venue{% endblock %}-->
+<!--{% block content %}-->
+<!DOCTYPE html>
+<html lang="en">
   <div class="form-wrapper">
-    <form method="post" class="form">
+    <form id="venue_form" method="post" class="form" enctype='application/json'>
       <h3 class="form-heading">List a new venue <a href="{{ url_for('index') }}" title="Back to homepage"><i class="fa fa-home pull-right"></i></a></h3>
       <div class="form-group">
         <label for="name">Name</label>
@@ -39,4 +41,37 @@
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
-{% endblock %}
+  <script>
+    console.log("Ana hena");
+document.getElementById('venue_form').onsubmit = function(e){
+      console.log("Ana hena kaman");
+      e.preventDefault();
+      fetch('/venues/create', {
+        method: 'POST',
+        body: JSON.stringify({
+          'name': document.getElementById('name').value,
+          'city': document.getElementById('city').value,
+          'state': document.getElementById('state').value,
+          'address': document.getElementById('address').value,
+          'phone': document.getElementById('phone').value,
+          'genres': document.getElementById('genres').value,
+          'facebook_link': document.getElementById('facebook_link').value,
+          'id': 'meeral'
+        }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(function(response){
+        return response.json();
+      })
+      .then(function(jsonResponse){
+        console.log(jsonResponse);
+      })
+      .catch(function(){
+        console.log('error');
+      })
+    }
+  </script>
+<!--{% endblock %}-->
+</html>
