--- a/projects/01_fyyur/starter_code/templates/layouts/main.html
+++ b/projects/01_fyyur/starter_code/templates/layouts/main.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>{% block title %}{% endblock %}</title>
@@ -112,11 +113,42 @@
       {% block footer %}{% endblock %}
     </div>
   </div>
-
+</body>
   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')</script>
   <script type="text/javascript" src="/static/js/libs/bootstrap-3.1.1.min.js" defer></script>
   <script type="text/javascript" src="/static/js/plugins.js" defer></script>
-  <script type="text/javascript" src="scripts/new_venue.js"></script>
-</body>
+  <script>
+    document.getElementById('venue_form').onsubmit = function(e){
+      console.log('wasalna');
+      e.preventDefault();
+      fetch('/venues/create', {
+        method: 'POST',
+        body: JSON.stringify({
+          'name': document.getElementById('name').value,
+          'city': document.getElementById('city').value,
+          'state': document.getElementById('state').value,
+          'address': document.getElementById('address').value,
+          'phone': document.getElementById('phone').value,
+          'genres': document.getElementById('genres').value,
+          'facebook_link': document.getElementById('facebook_link').value
+        }),
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+      .then(function(){
+        console.log('success');
+      })
+      .catch(err => {
+      if (typeof err.text === 'function') {
+        err.text().then(errorMessage => {
+          this.props.dispatch(displayTheError(errorMessage))
+        });
+      } else {
+           console.log(err)
+      }
+      })
+    }
+  </script>
 </html>
