--- a/projects/01_fyyur/starter_code/templates/pages/venues.html
+++ b/projects/01_fyyur/starter_code/templates/pages/venues.html
@@ -1,18 +1,20 @@
 {% extends 'layouts/main.html' %}
 {% block title %}Fyyur | Venues{% endblock %}
 {% block content %}
-{% for venue in venues %}
+{% for venue in data %}
 <h3>{{ venue.city }}, {{ venue.state }}</h3>
 	<ul class="items">
-		{% for venue in venues %}
+		{% for v in venues %}
+		{% if v.city==venue.city and v.state==venue.state %}
 		<li>
-			<a href="/venues/{{ venue.id }}">
+			<a href="/venues/{{ v.id }}">
 				<i class="fas fa-music"></i>
 				<div class="item">
-					<h5>{{ venue.name }}</h5>
+					<h5>{{ v.name }}</h5>
 				</div>
 			</a>
 		</li>
+		{% endif %}
 		{% endfor %}
 	</ul>
 {% endfor %}
